Remove -webkit-text-size-adjust css property by backporting changeset 145168 This property would disable the effect of --zoom. See http://webkit.org/b/56543 for discussion